# ComfyUI-Chord

./: README.md  nodes.py
chord/: __init__.py  normal_to_height.py  pyproject.toml  requirements.txt
chord/chord/module/: base.py  stable_diffusion.py
chord/example_workflows/: chord_flux_t2i_image_to_material.json  chord_image_to_material.json  chord_zimage_turbo_t2i_image_to_material.json
example_workflows/: chord_sdxl_t2i_image_to_material.json
examples/: chord_image_to_material.json
